Content block added

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -34,7 +34,8 @@
     </div>
   </nav>
   {% endblock %}
-
+{% block content %}
+{% endblock %}
 {% block footer %}
   <footer class="page-footer black lighten">
     <div class="footer-copyright">
