--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,1 +1,100 @@
 {% extends "base.html" %}
+
+
+
+{% block content %}
+
+<!-- We need a jumbotron here -->
+
+<div class="jumbotron">
+	<!-- CSS for text within the jumbotron havent been defined -->
+
+</div>
+
+<div class="row">
+	
+	<div class="col s12 m4">
+        <div class="grey-text">
+          <div class="icon-block">
+            <h1 class="center red-text"><i class="material-icons">speaker_notes</i></h1>
+            <h5 class="center">News</h5>           
+          </div>
+        </div>
+        <!-- Put in template for each news article -->
+		<div class="row">
+	        <div class="col s12">
+	          <div class="card blue-grey darken-1">
+	            <div class="card-content white-text">
+	              <span class="card-title">Card Title</span>
+	              <p>I am a very simple card. I am good at containing small bits of information.
+	              I am convenient because I require little markup to use effectively.</p>
+	            </div>
+	            <div class="card-action">
+	              <a href="#">This is a link</a>
+	              <a href="#">This is a link</a>
+	            </div>
+	          </div>
+	        </div>
+	    </div>
+        <!-- Template ends here -->
+	</div>
+	
+	<div class="col s12 m4">
+		<div class="grey-text">
+          <div class="icon-block">
+            <h1 class="center red-text"><i class="material-icons">event</i></h1>
+            <h5 class="center">Events</h5>           
+          </div>
+        </div>
+        <!-- Put in template for each event -->
+		<div class="row">
+	        <div class="col s12">
+	          <div class="card blue-grey darken-1">
+	            <div class="card-content white-text">
+	              <span class="card-title">Card Title</span>
+	              <p>I am a very simple card. I am good at containing small bits of information.
+	              I am convenient because I require little markup to use effectively.</p>
+	            </div>
+	            <div class="card-action">
+	              <a href="#">This is a link</a>
+	              <a href="#">This is a link</a>
+	            </div>
+	          </div>
+	        </div>
+	    </div>
+        <!-- Template ends here -->
+	</div>
+
+	<div class="col s12 m4">
+		<div class="grey-text">
+          <div class="icon-block">
+            <h1 class="center red-text"><i class="material-icons">book</i></h1>
+            <h5 class="center">Blog</h5>           
+          </div>
+        </div>
+        <!-- Put in template for each blog -->
+		<div class="row">
+	        <div class="col s12">
+	          <div class="card blue-grey darken-1">
+	            <div class="card-content white-text">
+	              <span class="card-title">Card Title</span>
+	              <p>I am a very simple card. I am good at containing small bits of information.
+	              I am convenient because I require little markup to use effectively.</p>
+	            </div>
+	            <div class="card-action">
+	              <a href="#">This is a link</a>
+	              <a href="#">This is a link</a>
+	            </div>
+	          </div>
+	        </div>
+	    </div>
+        <!-- Template ends here -->
+	</div>
+
+</div>
+
+{% endblock %}
+
+{% block scripts %}
+
+{% endblock %}
