Meet the rep updated!

--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -32,10 +32,11 @@
 	<div>
 		<br></br>
 	 	<h3 class="center-align">POSITION HOLDERS</h3>
-	 </div>
- 
+	</div>
+
+ 	<div class="container">
 	 <div class="row center-align">
-	 	<div class="col s3 ">
+	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
 						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
@@ -48,7 +49,7 @@
 			</div>
 	 	</div>
 
-	 	<div class="col s3 push-s1">
+	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
 						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
@@ -62,7 +63,7 @@
 			</div>
 	 	</div>
 
-	 	<div class="col s3 push-s2">
+	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
 						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
@@ -75,14 +76,13 @@
 					</div>
 			</div>
 	 	</div>
- 	</div>
 
- 	<div class="row center-align">
-	 	<div class="col s3 push-s2">
+ 	
+	 	<div class="col s12 m4 ">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
 						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
-						<span class="card-title">GIRLS-REP</span>	 
+						<span class="card-title">UG GIRL'S REP</span>	 
  					</div>
  					
  					<div class="card-content">
@@ -92,7 +92,7 @@
 			</div>
 	 	</div>
 
-	 	<div class="col s3 push-s3">
+	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
 						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
@@ -106,7 +106,21 @@
 			</div>
 	 	</div>
 
- 	</div>
+	 	<div class="col s12 m4">
+			<div class="card-panel teal lighten-2 small">
+					<div class="card-image">
+						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+						<span class="card-title">PG GIRL'S REP</span>	 
+ 					</div>
+ 					
+ 					<div class="card-content">
+ 					<p>NAME OF PRESIDENT</p>
+ 					<p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
+					</div>
+			</div>
+	 	</div>
+	 </div>
+	</div>
 
  	<h3 class="center-align">CLASS REPESENTATIVES</h3>
 	 <div class="row">
@@ -201,8 +215,8 @@
 
         				<tbody>
       						<tr>
-       				 			<td>Chinmay Koparkar</td>
-            					<td>Mechanical</td>
+       				 			<td>xyz</td>
+            					<td>eclairs</td>
             					<td>9876543210</td>
           					</tr>
           					<tr>
