--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -1,30 +1,28 @@
 {% extends "base.html" %}
+<html>
 {% load staticfiles %}
-{% block styles %}
-  <link href="{% static 'site/css/main.css' %}" rel="stylesheet">
+<head>
+
   <link href="{% static 'site/css/fullcalendar.min.css' %}" rel="stylesheet">
   <link href="{% static 'materialize/css/materialize.min.css' %}" rel="stylesheet">
-{% endblock styles %}
-
-{% block content %}
-  <div id='calendar'></div>
-{% endblock %}
-
-{% block scripts %}
   <script src="{% static 'site/js/jquery.min.js' %}"></script>
   <script src="{% static 'site/js/moment.min.js' %}"></script>
   <script src="{% static 'site/js/fullcalendar.min.js' %}"></script>
-  <script type="text/javascript">
-    $(document).ready(function() {
+  <script>
+  $(document).ready(function() {
 
-      // page is now ready, initialize the calendar...
+    // page is now ready, initialize the calendar...
 
       $('#calendar').fullCalendar({
           // put your options and callbacks here
       })
-
-    });
-    $(".button-collapse").sideNav();
+  });
   </script>
+</head>
 
-{% endblock %}
+<body>
+
+    <div id='calendar'></div>
+
+</body>
+</html>
