All the html is in bloacks now

--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -1,28 +1,29 @@
-<html>
+{% extends "base.html" %}
 {% load staticfiles %}
-<head>
-
+{% block styles %}
+  <link href="{% static 'site/css/main.css' %}" rel="stylesheet">
   <link href="{% static 'site/css/fullcalendar.min.css' %}" rel="stylesheet">
   <link href="{% static 'materialize/css/materialize.min.css' %}" rel="stylesheet">
+{% endblock styles %}
+
+{% block content %}
+  <div id='calendar'></div>
+{% endblock %}
+
+{% block scripts %}
   <script src="{% static 'site/js/jquery.min.js' %}"></script>
   <script src="{% static 'site/js/moment.min.js' %}"></script>
   <script src="{% static 'site/js/fullcalendar.min.js' %}"></script>
-  <script>
-  $(document).ready(function() {
+  <script type="text/javascript">
+    $(document).ready(function() {
 
-    // page is now ready, initialize the calendar...
+      // page is now ready, initialize the calendar...
 
       $('#calendar').fullCalendar({
           // put your options and callbacks here
       })
 
-  });
+    });
+    $(".button-collapse").sideNav();
   </script>
-</head>
-
-<body>
-
-    <div id='calendar'></div>
-
-</body>
-</html>
+{% endblock %}
