Calendar View Added!

--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -23,6 +23,8 @@
 <body>
 
     <div id='calendar'></div>
-
+    {% for event in events %}
+    <h1>{{ event.title }}</h1>
+    {% endfor %}
 </body>
 </html>
