--- a/src/templates/clublife.html
+++ b/src/templates/clublife.html
@@ -43,9 +43,13 @@
       <div class="center-align">
      
       <div  id="clubs" class="row">
+        <div class="col s12">
+          <ul class="tabs">
+            <li class="tab col s6" id="techclubs"><a href="">TECH CLUBS</a></li>
+            <li class="tab col s6" id="hobbyclubs"><a href="">HOBBY CLUBS</a></li>
+          </ul>
+        </div>
 
-         <button class=" col s6 m6 l6 btn-large waves-effect waves-light grey darken-1 " id="techclubs" >TECHCLUBS</button>
-         <button class=" col s6 m6 l6 btn-large  waves-effect waves-light grey darken-1" id="hobbyclubs" >HOBBY CLUBS</button>
       </div>  
      
 
