--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -6,8 +6,8 @@
 <script>
 	$(document).ready(function(){
 		var flag=0;
-		$("#btech").hide();
-		$("#mtech").hide();
+		$("#btech").show();
+		$("#mtech").show();
 
 		$("#showbtech").click(function(){
 			$("#btech").show();
@@ -39,12 +39,13 @@
 	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
+            <span class="card-title">ENGI-CON</span>  
 						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
-						<span class="card-title">ENGI-CON</span>	 
  					</div>
  					<div class="card-content">
  					<p>NAME OF PRESIDENT</p>
  					<p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
+          <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
 					</div>
 			</div>
 	 	</div>
@@ -52,28 +53,28 @@
 	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
-						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
-						<span class="card-title">PRESIDENT</span>	 
- 					</div>
- 					
- 					<div class="card-content" align="center">
- 					<p>NAME OF PRESIDENT</p>
- 					<p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-					</div>
+            <span class="card-title">PRESIDENT</span>  
+            <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+          </div>
+          <div class="card-content">
+          <p>NAME OF PRESIDENT</p>
+          <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
+          <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+          </div>
 			</div>
 	 	</div>
 
 	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
-						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
-						<span class="card-title">INCI-CON</span>	 
- 					</div>
- 					
- 					<div class="card-content">
- 					<p>NAME OF PRESIDENT</p>
- 					<p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-					</div>
+            <span class="card-title">INCI-CON</span>  
+            <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+          </div>
+          <div class="card-content">
+          <p>NAME OF PRESIDENT</p>
+          <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
+          <p><i class="tiny material-icons">email</i> xyzexaghghmple@gmail.com</p>
+          </div>
 			</div>
 	 	</div>
 
@@ -81,90 +82,94 @@
 	 	<div class="col s12 m4 ">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
-						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
-						<span class="card-title">UG GIRL'S REP</span>	 
- 					</div>
- 					
- 					<div class="card-content">
- 					<p>NAME OF PRESIDENT</p>
- 					<p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-					</div>
+            <span class="card-title">GIRLS REP</span>  
+            <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+          </div>
+          <div class="card-content">
+          <p>NAME OF PRESIDENT</p>
+          <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
+          <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+          </div>
 			</div>
 	 	</div>
 
 	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
-						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
-						<span class="card-title">SECRETARY</span>	 
- 					</div>
- 					
- 					<div class="card-content">
- 					<p>NAME OF PRESIDENT</p>
- 					<p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-					</div>
+            <span class="card-title">SECRETARY</span>  
+            <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+          </div>
+          <div class="card-content">
+          <p>NAME OF PRESIDENT</p>
+          <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
+          <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+          </div>
 			</div>
 	 	</div>
 
 	 	<div class="col s12 m4">
 			<div class="card-panel teal lighten-2 small">
 					<div class="card-image">
-						<img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
-						<span class="card-title">PG GIRL'S REP</span>	 
- 					</div>
- 					
- 					<div class="card-content">
- 					<p>NAME OF PRESIDENT</p>
- 					<p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-					</div>
+            <span class="card-title">PG GIRLS REP</span>  
+            <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+          </div>
+          <div class="card-content">
+          <p>NAME OF PRESIDENT</p>
+          <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
+          <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+          </div>
 			</div>
 	 	</div>
 	 </div>
 	</div>
 
  	<h3 class="center-align">CLASS REPESENTATIVES</h3>
-	 <div class="row">
-	 	<button class="col s5 m5 l5 push-s1 push-m1 push-l1 
-	 	btn-large waves-effect waves-light red darken-1" id="showbtech">B TECH
-	 	</button> 
+  
+  <div class="row container">
+  <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showbtech">B TECH</button> 
+  </div>
 
-	 	<button class="col s5 m5 l5 push-s1 push-m1 push-l1 btn-large waves-effect waves-light red darken-1" id="showmtech">M TECH
-	 	</button> 
-	 </div>
-
-	<div class="row">
-		<div class="col s5 m5 l5 push-s1 push-m1 push-l1" id="btech">
-	 	<ul class="collapsible" data-collapsible="accordion">
+	<div class="row container">
+	 	<div class="col s12 m12 l12" id="btech">
+	 	 <ul class="collapsible" data-collapsible="accordion">
     		<li>
       			<div class="collapsible-header"><i class=" material-icons">list</i>Final Years
       			</div>
       			<div class="collapsible-body">
-      				<table class="striped centered responsive-table" "centered">
+      				<table class="striped centered responsive-table">
         				<thead>
-          					<tr>
-              					<th data-field="id">NAME</th>
-              					<th data-field="name">BRANCH</th>
-              					<th data-field="price">CONTACT</th>
-          					</tr>
-        				</thead>
+                    <tr>
+                        <th data-field="id">NAME</th>
+                        <th data-field="name">BRANCH</th>
+                        <th data-field="price">CONTACT</th>
+                        <th data-field="email">EMAIL-ID</th>
+                        <th data-field="address">ADDRESS</th>
+                    </tr>
+                </thead>
 
-        				<tbody>
-      						<tr>
-       				 			<td>Alvin</td>
-            					<td>Eclair</td>
-            					<td>$0.87</td>
-          					</tr>
-          					<tr>
-            					<td>Alan</td>
-            					<td>Jellybean</td>
-            					<td>$3.76</td>
-          					</tr>
-          					<tr>
-           						<td>Jonathan</td>
-            					<td>Lollipop</td>
-            					<td>$7.00</td>
-          					</tr>
-        				</tbody>
+                <tbody>
+                  <tr>
+                    <td>Alvin</td>
+                      <td>Eclair</td>
+                      <td>$0.87</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                    <tr>
+                      <td>Alan</td>
+                      <td>Jellybean</td>
+                      <td>$3.76</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                    <tr>
+                      <td>Jonathan vsdvsvdsvd</td>
+                      <td>Mechanical</td>
+                      <td>9876543210</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                </tbody>
       				</table>
 				</div>
    			</li>
@@ -172,115 +177,148 @@
       			<div class="collapsible-header"><i class="material-icons">list</i>Third Years
       			</div>
       			<div class="collapsible-body">
-      				<table class="striped centered responsive-table" "centered">
+      				<table class="striped centered responsive-table">
         				<thead>
-          					<tr>
-              					<th data-field="id">NAME</th>
-              					<th data-field="name">BRANCH</th>
-              					<th data-field="price">CONTACT</th>
-          					</tr>
-        				</thead>
+                    <tr>
+                        <th data-field="id">NAME</th>
+                        <th data-field="name">BRANCH</th>
+                        <th data-field="price">CONTACT</th>
+                        <th data-field="email">EMAIL-ID</th>
+                        <th data-field="address">ADDRESS</th>
+                    </tr>
+                </thead>
 
-        				<tbody>
-      						<tr>
-       				 			<td>Alvin</td>
-            					<td>Eclair</td>
-            					<td>$0.87</td>
-          					</tr>
-          					<tr>
-            					<td>Alan</td>
-            					<td>Jellybean</td>
-            					<td>$3.76</td>
-          					</tr>
-          					<tr>
-           						<td>Jonathan</td>
-            					<td>Lollipop</td>
-            					<td>$7.00</td>
-          					</tr>
-        				</tbody>
+                <tbody>
+                  <tr>
+                    <td>Alvin</td>
+                      <td>Eclair</td>
+                      <td>$0.87</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                    <tr>
+                      <td>Alan</td>
+                      <td>Jellybean</td>
+                      <td>$3.76</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                    <tr>
+                      <td>Jonathan vsdvsvdsvd</td>
+                      <td>Mechanical</td>
+                      <td>9876543210</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                </tbody>
       				</table>
       			</div>
       		</li>
       		<li>
       			<div class="collapsible-header"><i class="material-icons">list</i>Second Years</div>
       			<div class="collapsible-body">
-  					<table class="striped centered responsive-table" "centered">
+  					<table class="striped centered responsive-table">
         				<thead>
-          					<tr>
-              					<th data-field="id">NAME</th>
-              					<th data-field="name">BRANCH</th>
-              					<th data-field="price">CONTACT</th>
-          					</tr>
-        				</thead>
+                    <tr>
+                        <th data-field="id">NAME</th>
+                        <th data-field="name">BRANCH</th>
+                        <th data-field="price">CONTACT</th>
+                        <th data-field="email">EMAIL-ID</th>
+                        <th data-field="address">ADDRESS</th>
+                    </tr>
+                </thead>
 
-        				<tbody>
-      						<tr>
-       				 			<td>xyz</td>
-            					<td>eclairs</td>
-            					<td>9876543210</td>
-          					</tr>
-          					<tr>
-            					<td>Alan</td>
-            					<td>Jellybean</td>
-            					<td>$3.76</td>
-          					</tr>
-          					<tr>
-           						<td>Jonathan</td>
-            					<td>Lollipop</td>
-            					<td>$7.00</td>
-          					</tr>
-        				</tbody>
+                <tbody>
+                  <tr>
+                    <td>Alvin</td>
+                      <td>Eclair</td>
+                      <td>$0.87</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                    <tr>
+                      <td>Alan</td>
+                      <td>Jellybean</td>
+                      <td>$3.76</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                    <tr>
+                      <td>Jonathan vsdvsvdsvd</td>
+                      <td>Mechanical</td>
+                      <td>9876543210</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                </tbody>
       				</table>
       			</div>
     		</li>
- 		</ul>
+ 		 </ul>
  		</div>
+  </div>
 
- 		<div class="col s5 m5 l5 push-s1 push-m1 push-l1" id="mtech">
-	 	<ul class="collapsible" data-collapsible="accordion">
+  <div class="row container">
+    <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showmtech">M TECH</button> 
+  </div>
+
+  <div class="row container">
+ 		<div class="col s12 m12 l12" id="mtech">
+	 	   <ul class="collapsible" data-collapsible="accordion">
     		<li>
       			<div class="collapsible-header"><i class="material-icons">list</i>Second Years
-      			</div>
+            </div>
       			<div class="collapsible-body">
-      				<table class="striped centered responsive-table" "centered">
+      				<table class="striped centered responsive-table">
         				<thead>
-          					<tr>
-              					<th data-field="id">NAME</th>
-              					<th data-field="name">BRANCH</th>
-              					<th data-field="price">CONTACT</th>
-          					</tr>
-        				</thead>
+                    <tr>
+                        <th data-field="id">NAME</th>
+                        <th data-field="name">BRANCH</th>
+                        <th data-field="price">CONTACT</th>
+                        <th data-field="email">EMAIL-ID</th>
+                        <th data-field="address">ADDRESS</th>
+                    </tr>
+                </thead>
 
-        				<tbody>
-      						<tr>
-       				 			<td>Alvin</td>
-            					<td>Eclair</td>
-            					<td>$0.87</td>
-          					</tr>
-          					<tr>
-            					<td>Alan</td>
-            					<td>Jellybean</td>
-            					<td>$3.76</td>
-          					</tr>
-          					<tr>
-           						<td>Jonathan</td>
-            					<td>Lollipop</td>
-            					<td>$7.00</td>
-          					</tr>
-        				</tbody>
+                <tbody>
+                  <tr>
+                    <td>Alvin</td>
+                      <td>Eclair</td>
+                      <td>$0.87</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                    <tr>
+                      <td>Alan</td>
+                      <td>Jellybean</td>
+                      <td>$3.76</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                    <tr>
+                      <td>Jonathan vsdvsvdsvd</td>
+                      <td>Mechanical</td>
+                      <td>9876543210</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
+                    </tr>
+                </tbody>
       				</table>
-				</div>
+				    </div>
    			</li>
+
     		<li>
-      			<div class="collapsible-header"><i class="material-icons">list</i>First Years
-      			</div>
+      		<div class="collapsible-header"><i class="material-icons">list</i>First Years
+      		</div>
       			<div class="collapsible-body">
-      				<table class="striped centered responsive-table" "centered">
+      				<table class="striped centered responsive-table">
         				<thead>
           					<tr>
               					<th data-field="id">NAME</th>
               					<th data-field="name">BRANCH</th>
               					<th data-field="price">CONTACT</th>
+                        <th data-field="email">EMAIL-ID</th>
+                        <th data-field="address">ADDRESS</th>
           					</tr>
         				</thead>
 
@@ -289,21 +327,27 @@
        				 			<td>Alvin</td>
             					<td>Eclair</td>
             					<td>$0.87</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
           					</tr>
           					<tr>
             					<td>Alan</td>
             					<td>Jellybean</td>
             					<td>$3.76</td>
+                      <td>abcdefghijkllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
           					</tr>
           					<tr>
-           						<td>Jonathan</td>
-            					<td>Lollipop</td>
+           						<td>Jonathan vsdvsvdsvd</td>
+            					<td>Mechanical</td>
             					<td>9876543210</td>
+                      <td>abcdefghijkfllm@gmail.com</td>
+                      <td>PG Block,Room 74</td>
           					</tr>
         				</tbody>
       				</table>
-      			</div>
-      		</li>
+      		</div>
+        </li>
  		</ul>
  		</div>
 	 </div>
