Events will show now

--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -20,7 +20,8 @@
       // page is now ready, initialize the calendar...
 
       $('#calendar').fullCalendar({
-          // put your options and callbacks here
+          events: "/calEvents"
+          editable: false,
       })
 
     });
