--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -6,18 +6,24 @@
 
 <!-- We need a jumbotron here -->
 
-<div class="jumbotron">
+<div class="corporate-jumbo">
 	<!-- CSS for text within the jumbotron havent been defined -->
-
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-sm-8">
+				<h1>NITK Student Council</h1>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div class="row">
-	
+
 	<div class="col s12 m4">
         <div class="grey-text">
           <div class="icon-block">
             <h1 class="center red-text"><i class="material-icons">speaker_notes</i></h1>
-            <h5 class="center">News</h5>           
+            <h5 class="center">News</h5>
           </div>
         </div>
         <!-- Put in template for each news article -->
@@ -38,12 +44,12 @@
 	    </div>
         <!-- Template ends here -->
 	</div>
-	
+
 	<div class="col s12 m4">
 		<div class="grey-text">
           <div class="icon-block">
             <h1 class="center red-text"><i class="material-icons">event</i></h1>
-            <h5 class="center">Events</h5>           
+            <h5 class="center">Events</h5>
           </div>
         </div>
         <!-- Put in template for each event -->
@@ -69,7 +75,7 @@
 		<div class="grey-text">
           <div class="icon-block">
             <h1 class="center red-text"><i class="material-icons">book</i></h1>
-            <h5 class="center">Blog</h5>           
+            <h5 class="center">Blog</h5>
           </div>
         </div>
         <!-- Put in template for each blog -->
