--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -67,8 +67,8 @@ body>.navbar-transparent {
 
 /* Home page styling */
 .corporate-jumbo {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)),
-      url("/static/site/img/banner.jpg");
+    background-image:
+      url("/static/site/img/lighthouse.jpg");
     background-repeat: no-repeat;
     background-position: 80% center;
     background-attachment: fixed;
@@ -85,8 +85,12 @@ body>.navbar-transparent {
 }
 
 .corporate-jumbo p, .corporate-jumbo h1 {
-    color: #eee;
+    color:#f5f5f5;
     text-shadow: 0px 0px 2px black;
+    text-transform: uppercase;
+    font-size: 112px;
+    font-weight: 600;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .corporate-jumbo p {
@@ -99,9 +103,7 @@ body>.navbar-transparent {
 
 .corporate-jumbo > .container {
     display: block;
-    position: absolute;
-    bottom: 2em;
-    left: 15px;
+    text-align: center;
 }
 
 .contact-banner {
