--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-
+{% block html %}
+<html lang="en">
+{% endblock %}
 
 {% block content %}
 
@@ -11,13 +13,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-sm-8">
-				<h1>NITK Student Council</h1>
+				<h1>NITK<br>Students' Council</h1>
 			</div>
 		</div>
 	</div>
 </div>
 
-<div class="row">
+<div class="row bg-white">
 
 	<div class="col s12 m4">
         <div class="grey-text">
