--- a/src/templates/clublife.html
+++ b/src/templates/clublife.html
@@ -1,47 +1,48 @@
-{% extends "base.html" %}
+{% extends "static.html" %}
 {% load staticfiles %}
+
+{% block page-info %}
+<div class="container">
+    <div class="row">
+        <div class="col s12">
+            <a href="/" class="breadcrumb">Home</a>
+            <a href="#!" class="breadcrumb">ClubLife</a>
+        </div>
+    </div>
+    <div class="row">
+        <h1 class="title">ClubLife</h1>
+    </div>
+</div>
+{% endblock %}
 {% block content %}
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
    $(document).ready(function(){
-   
+
       $("#HOBBY").hide();
-      
+
     $("#hobbyclubs").click(function(){
-      
+
       $("#HOBBY").show();
       $("#TECH").hide();
-      
+
     });
 
    $("#techclubs").click(function(){
-     
+
       $("#HOBBY").hide();
        $("#TECH").show();
-      
+
    });
-   
- 
+
+
 });
   </script>
-    <nav >
-      <div class="top-nav grey darken-3" >
-        <div class="valign-wrapper">
-          <div class="container">
-            <h1 class="center-align">      CLUB LIFE! </h1> 
-          </div>
-        </div>
-      </div>
-    </nav>
-    <div class="row" id="images">
-      <div class="col s12 m6 l6"></div>
-      <div class="col s12 m6 l6"></div>
-    </div>
-    <div class="container" style="margin-top:100px;">  
+    <div class="container">
       <div class="center-align">
-     
+
       <div  id="clubs" class="row">
         <div class="col s12">
           <ul class="tabs">
@@ -50,8 +51,8 @@
           </ul>
         </div>
 
-      </div>  
-     
+      </div>
+
 
         <div id="TECH" >
           <div class="row">
@@ -108,7 +109,7 @@
                   </div>
                 </div>
 
-            
+
             </div>
             <div class="col s12 m6 l6" id="column2">
 
@@ -164,10 +165,10 @@
                 </div>
             </div>
 
-          </div> 
+          </div>
         </div>
 
-      
+
 
         <div id="HOBBY">
           <div class="row">
@@ -189,7 +190,7 @@
                   </div>
               </div>
             </div>
-            <div class=" col s12 m4 l4"  >  
+            <div class=" col s12 m4 l4"  >
               <div id="artist" class="card">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{% static 'site/img/sample.jpg' %}">
@@ -207,7 +208,7 @@
                   </div>
               </div>
             </div>
-            <div class=" col s12 m4 l4"  >  
+            <div class=" col s12 m4 l4"  >
               <div id="astronomy" class="card">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{% static 'site/img/sample.jpg' %}">
@@ -224,10 +225,10 @@
                     <p>Here is some more information about this product that is only revealed once clicked on.</p>
                   </div>
               </div>
-            </div>  
+            </div>
           </div>
         </div>
-       </div> 
+       </div>
   </div>
 
 {% endblock %}
