--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -1,15 +1,34 @@
-{% extends "base.html" %} {% block content %}
+{% extends "static.html" %}
+
+{% block page-info %}
+<div class="container">
+    <div class="row">
+        <div class="col s12">
+            <a href="/" class="breadcrumb">Home</a>
+            <a href="#!" class="breadcrumb">Message From The President</a>
+        </div>
+    </div>
+    <div class="row">
+        <h1 class="title">Message From The President</h1>
+    </div>
+</div>
+{% endblock %}
+
+{% block content %}
 {% load static %}
 <link href="{% static 'site/css/message.css' %}" rel="stylesheet">
 
-<div class="row">
-    <div class="col s2 card-image small presi-image-div">
-              <img class="presi-image" src="{% static 'site/img/presi.jpg' %}">
-              <span class="card-title">Presi Name</span>
+<div class="container">
+    <div class="row valign-wrapper">
+        <div class="col s4">
+              <img class="responsive-img" src="{% static 'site/img/presi.jpg' %}">
+        </div>
+        <div class="col s8">
+            <h4>Anirudh Ganesh</h4>
+        </div>
+
     </div>
-    <h2 class="red-text col s8 center-align message-heading">Message from the President</h2>
-</div>
-<div class="container message">
+    <div class="row flow-text">
     <!--     <div class="row">
         <div class="col s8 push-s2"> -->
     <article >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -23,5 +42,6 @@
     </article>
     <!--         </div>
     </div> -->
+    </div>
 </div>
 {% endblock %}
