Bigger pictures for the crs

--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -127,21 +127,21 @@
               <div class="collapsible-body">
                 <ul class="collection">
                   <li class="collection-item avatar">
-                    <i class="material-icons circle red">play_arrow</i>
+                    <i class="material-icons biggercircle red">play_arrow</i>
                     <span class="title">Alvin</span>
                     <br>Mech
                     <div class="secondary-content">x@gmail.com<br> 98766543</div><br>
                     Address
                   </li>
                    <li class="collection-item avatar">
-                    <i class="material-icons circle">folder</i>
+                    <i class="material-icons biggercircle">folder</i>
                     <span class="title">George</span>
                     <br>Mech
                     <div class="secondary-content">y@gmail.com<br>9876654378</div><br>
                     Address
                   </li>
                   <li class="collection-item avatar">
-                    <i class="material-icons circle green">insert_chart</i>
+                    <i class="material-icons biggercircle green">insert_chart</i>
                     <span class="title">Kalyan</span>
                     <br>IT
                     <div class="secondary-content">z@gmail.com<br>9876654378</div><br>
@@ -156,21 +156,21 @@
               <div class="collapsible-body">
                 <ul class="collection">
                   <li class="collection-item avatar">
-                    <i class="material-icons circle red">play_arrow</i>
+                    <i class="material-icons biggercircle red">play_arrow</i>
                     <span class="title">Alvin</span>
                     <br>Mech
                     <div class="secondary-content">x@gmail.com<br> 98766543</div><br>
                     Address
                   </li>
                     <li class="collection-item avatar">
-                    <i class="material-icons circle">folder</i>
+                    <i class="material-icons biggercircle">folder</i>
                     <span class="title">George</span>
                     <br>Mech
                     <div class="secondary-content">y@gmail.com<br>9876654378</div><br>
                     Address
                   </li>
                     <li class="collection-item avatar">
-                    <i class="material-icons circle green">insert_chart</i>
+                    <i class="material-icons biggercircle green">insert_chart</i>
                     <span class="title">Kalyan</span>
                     <br>IT
                     <div class="secondary-content">z@gmail.com<br>9876654378</div><br>
@@ -184,21 +184,21 @@
               <div class="collapsible-body">
                 <ul class="collection">
                   <li class="collection-item avatar">
-                    <i class="material-icons circle red">play_arrow</i>
+                    <i class="material-icons biggercircle red">play_arrow</i>
                     <span class="title">Alvin</span>
                     <br>Mech
                     <div class="secondary-content">x@gmail.com<br> 98766543</div><br>
                     Address
                   </li>
                     <li class="collection-item avatar">
-                    <i class="material-icons circle">folder</i>
+                    <i class="material-icons biggercircle">folder</i>
                     <span class="title">George</span>
                     <br>Mech
                     <div class="secondary-content">y@gmail.com<br>9876654378</div><br>
                     Address
                   </li>
                     <li class="collection-item avatar">
-                    <i class="material-icons circle green">insert_chart</i>
+                    <i class="material-icons biggercircle green">insert_chart</i>
                     <span class="title">Kalyan</span>
                     <br>IT
                     <div class="secondary-content">z@gmail.com<br>9876654378</div><br>
