--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -72,7 +72,7 @@
       	
       		<p>Go to academic section, apply for bonafide.
       		<br>
-      		Fill out the form.
+      		Fill out the <a href="{% static 'site/Application_for_Transcripts.pdf' %}">this </a>form.
       		<br>
       		Pay Rs200 per transcript at the cash section
       		<br>
