--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -48,7 +48,7 @@
 </div>
 
   {% endblock %}
-
+<div class="wrapper">
 <div class="page-info">
 {% block page-info %}
 <div class="container">
@@ -70,7 +70,9 @@
 {% block content %}
 {% endblock %}
 </div>
-
+<div class="push"></div>
+</div>
+<div class="footer">
 {% block footer %}
   <footer class="page-footer black lighten">
     <div class="container">
@@ -97,6 +99,7 @@
     </div>
   </footer>
 {% endblock %}
+</div>
 
 <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
