--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -1,15 +1,15 @@
 {% extends "static.html" %}
 {% block page-info %}
 <div class="container">
-	<div class="row">
-		<div class="col s12">
-			<a href="/" class="breadcrumb">Home</a>
-			<a href="#!" class="breadcrumb">Meet The Representatives</a>
-		</div>
-	</div>
-	<div class="row">
-		<h1 class="title">Meet The Representatives</h1>
-	</div>
+  <div class="row">
+    <div class="col s12">
+      <a href="/" class="breadcrumb">Home</a>
+      <a href="#!" class="breadcrumb">Meet The Representatives</a>
+    </div>
+  </div>
+  <div class="row">
+    <h1 class="title">Meet The Representatives</h1>
+  </div>
 </div>
 {% endblock %}
   {% block content %}
@@ -30,7 +30,7 @@
     })
   </script>
     <div>
-		<h3 class="center-align">POSITION HOLDERS</h3>
+    <h3 class="center-align">POSITION HOLDERS</h3>
     </div>
     <div class="container">
      <div class="row center-align">
@@ -127,21 +127,21 @@
               <div class="collapsible-body">
                 <ul class="collection">
                   <li class="collection-item avatar">
-                    <i class="material-icons circle red">play_arrow</i>
+                    <i class="material-icons biggercircle red">play_arrow</i>
                     <span class="title">Alvin</span>
                     <br>Mech
                     <div class="secondary-content">x@gmail.com<br> 98766543</div><br>
                     Address
                   </li>
                    <li class="collection-item avatar">
-                    <i class="material-icons circle">folder</i>
+                    <i class="material-icons biggercircle">folder</i>
                     <span class="title">George</span>
                     <br>Mech
                     <div class="secondary-content">y@gmail.com<br>9876654378</div><br>
                     Address
                   </li>
                   <li class="collection-item avatar">
-                    <i class="material-icons circle green">insert_chart</i>
+                    <i class="material-icons biggercircle green">insert_chart</i>
                     <span class="title">Kalyan</span>
                     <br>IT
                     <div class="secondary-content">z@gmail.com<br>9876654378</div><br>
@@ -156,21 +156,21 @@
               <div class="collapsible-body">
                 <ul class="collection">
                   <li class="collection-item avatar">
-                    <i class="material-icons circle red">play_arrow</i>
+                    <i class="material-icons biggercircle red">play_arrow</i>
                     <span class="title">Alvin</span>
                     <br>Mech
                     <div class="secondary-content">x@gmail.com<br> 98766543</div><br>
                     Address
                   </li>
                     <li class="collection-item avatar">
-                    <i class="material-icons circle">folder</i>
+                    <i class="material-icons biggercircle">folder</i>
                     <span class="title">George</span>
                     <br>Mech
                     <div class="secondary-content">y@gmail.com<br>9876654378</div><br>
                     Address
                   </li>
                     <li class="collection-item avatar">
-                    <i class="material-icons circle green">insert_chart</i>
+                    <i class="material-icons biggercircle green">insert_chart</i>
                     <span class="title">Kalyan</span>
                     <br>IT
                     <div class="secondary-content">z@gmail.com<br>9876654378</div><br>
@@ -184,21 +184,21 @@
               <div class="collapsible-body">
                 <ul class="collection">
                   <li class="collection-item avatar">
-                    <i class="material-icons circle red">play_arrow</i>
+                    <i class="material-icons biggercircle red">play_arrow</i>
                     <span class="title">Alvin</span>
                     <br>Mech
                     <div class="secondary-content">x@gmail.com<br> 98766543</div><br>
                     Address
                   </li>
                     <li class="collection-item avatar">
-                    <i class="material-icons circle">folder</i>
+                    <i class="material-icons biggercircle">folder</i>
                     <span class="title">George</span>
                     <br>Mech
                     <div class="secondary-content">y@gmail.com<br>9876654378</div><br>
                     Address
                   </li>
                     <li class="collection-item avatar">
-                    <i class="material-icons circle green">insert_chart</i>
+                    <i class="material-icons biggercircle green">insert_chart</i>
                     <span class="title">Kalyan</span>
                     <br>IT
                     <div class="secondary-content">z@gmail.com<br>9876654378</div><br>
